test/corpus/access_list.txt
===
Access list
===

("some expression").first
"some other expression".first.second.third # this expression is not parenthesized because that would be ambiguous

---

(source_file
	(statement
		(expression
			(access_list
				accessed: (expression
					(parenthesized_expression
						expression: (expression
							(literal
								(string)
							)
						)
					)
				)
				accessor: (identifier)
			)
		)
	)
	(statement
		(expression
			(access_list
				accessed: (expression
					(access_list
						accessed: (expression
							(access_list
								accessed: (expression
									(literal
										(string)
									)
								)
								accessor: (identifier)
							)
						)
						accessor: (identifier)
					)
				)
				accessor: (identifier)
			)
		)
	)
	(statement
		(comment)
	)
)
