test/corpus/class_declaration.txt
===
Class declaration
===

class EmptyClass {
}

class SomeFunctions {
	fn a {
		print "in a"
	}

	fn b {
		print "in b"
	}
}

# This is illegal!

class SingleFunction fn a {
	print "in single function a"
}

---

(source_file
	(statement
		(class_declaration
			(identifier)
			(block)
		)
	)
	(statement
		(class_declaration
			(identifier)
			(block
				(statement
					(function_declaration
						(identifier)
						(block
							(statement
								(print
									(expression
										(literal
											(string)
										)
									)
								)
							)
						)
					)
				)
				(statement
					(function_declaration
						(identifier)
						(block
							(statement
								(print
									(expression
										(literal
											(string)
										)
									)
								)
							)
						)
					)
				)
			)
		)
	)
	(statement
		(comment)
	)
	(statement
		(class_declaration
			(identifier)
			(ERROR)
			(block
				(statement
					(print
						(expression
							(literal
								(string)
							)
						)
					)
				)
			)
		)
	)
)
