test/corpus/comments_in_maps_regression.txt
===
Comments in maps (regression test)
===

install = {
	gvd: "bin/gvd",
	# libgv: "lib/libgv.so",
}

---

(source_file
	(statement
		(assignment
			left: (identifier)
			right: (expression
				(map
					(map_item
						key: (expression (identifier))
						value: (expression (literal (string)))
					)
					(comment)
				)
			)
		)
	)
)
