test/corpus/index.txt
===
Indexing
===

a[69]
(1 + 2)[69]
[1, 2][3]
a[69] = 420

---

(source_file
	(statement
		(expression
			(index
				indexed: (expression
					(identifier)
				)
				index: (expression
					(literal
						(number)
					)
				)
			)
		)
	)
	(statement
		(expression
			(index
				indexed: (expression
					(parenthesized_expression
						expression: (expression
							(binary_expression
								left: (expression
									(literal
										(number)
									)
								)
								operator: (additive_operator)
								right: (expression
									(literal
										(number)
									)
								)
							)
						)
					)
				)
				index: (expression
					(literal
						(number)
					)
				)
			)
		)
	)
	(statement
		(expression
			(index
				indexed: (expression
					(vec
						(expression
							(literal
								(number)
							)
						)
						(expression
							(literal
								(number)
							)
						)
					)
				)
				index: (expression
					(literal
						(number)
					)
				)
			)
		)
	)
	(statement
		(assignment
			left: (index
				indexed: (expression (identifier))
				index: (expression (literal (number)))
			)
			right: (expression (literal (number)))
		)
	)
)
