test/corpus/qualifiers.txt
===
Qualifiers
===

pure fn function_one_qualifier {
}

pure static fn function_multiple_qualifiers {
}

pure static proto extern_function

static let variable_one_qualifier = 1

---

(source_file
	(function_declaration
		qualifiers: (qualifier_list
			(qualifier)
		)
		name: (identifier)
		body: (block)
	)
	(function_declaration
		qualifiers: (qualifier_list
			(qualifier)
			(qualifier)
		)
		name: (identifier)
		body: (block)
	)
	(statement
		(proto
			qualifiers: (qualifier_list
				(qualifier)
				(qualifier)
			)
			name: (identifier)
		)
	)
	(statement
		(var_decl
			qualifiers: (qualifier_list
				(qualifier)
			)
			name: (identifier)
			initial: (expression
				(literal
					(number)
				)
			)
		)
	)
)
