test/corpus/unary.txt
===
Unary operators
===

-420
1 + -2
0 - 5

---

(source_file
	(statement
		(expression
			(unary_expression
				operator: (unary_operator)
				operand: (expression
					(literal
						(number)
					)
				)
			)
		)
	)
	(statement
		(expression
			(binary_expression
				left: (expression
					(literal
						(number)
					)
				)
				operator: (additive_operator)
				right: (expression
					(unary_expression
						operator: (unary_operator)
						operand: (expression
							(literal
								(number)
							)
						)
					)
				)
			)
		)
	)
	(statement
		(expression
			(binary_expression
				left: (expression
					(literal
						(number)
					)
				)
				operator: (additive_operator)
				right: (expression
					(literal
						(number)
					)
				)
			)
		)
	)
)
